[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scenes/Writing/Writing_Scene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Themes/testTheme.theme" type="Theme" id=2]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Underline.svg" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Strikethrough.svg" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Italic.svg" type="Texture" id=5]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Logo.svg" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/Roboto/ROBOTO-REGULAR.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Export.svg" type="Texture" id=8]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Save.svg" type="Texture" id=9]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=10]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Code.svg" type="Texture" id=11]
[ext_resource path="res://Scripts/CornerMenu_VBox.gd" type="Script" id=12]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Bold.svg" type="Texture" id=13]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Center.svg" type="Texture" id=14]
[ext_resource path="res://Assets/Images/Icons/PlotWeaver_Right.svg" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )
shadow_color = Color( 0, 0, 0, 0.0156863 )
shadow_size = 9
anti_aliasing_size = 3

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.960784, 0.960784, 0.960784, 1 )
shadow_color = Color( 0, 0, 0, 0.0627451 )
shadow_size = 6

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=10]
extra_spacing_char = 1
font_data = ExtResource( 7 )

[node name="Main_Panel" type="Panel"]
light_mask = -2147483647
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -0.00219727
mouse_filter = 1
theme = ExtResource( 2 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Writing_Panel" parent="." instance=ExtResource( 1 )]
theme = null

[node name="CornerMenu_Canvas" type="CanvasLayer" parent="."]
layer = 2

[node name="CornerMenu_VBox" type="VBoxContainer" parent="CornerMenu_Canvas"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -180.0
margin_top = 40.0
margin_right = -45.0
margin_bottom = 180.0
mouse_filter = 2
custom_constants/separation = 32
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo_HBox" type="HBoxContainer" parent="CornerMenu_Canvas/CornerMenu_VBox"]
margin_right = 135.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 16
alignment = 2

[node name="PlotWeaver_Label" type="Label" parent="CornerMenu_Canvas/CornerMenu_VBox/Logo_HBox"]
margin_left = 79.0
margin_top = 10.0
margin_right = 79.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CornerMenu_Canvas/CornerMenu_VBox/Logo_HBox"]
margin_left = 95.0
margin_right = 135.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="Logo_TextureRect" type="TextureRect" parent="CornerMenu_Canvas/CornerMenu_VBox/Logo_HBox/Panel"]
margin_left = 3.5
margin_top = 4.0
margin_right = 35.5
margin_bottom = 36.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuList_VBox" type="VBoxContainer" parent="CornerMenu_Canvas/CornerMenu_VBox"]
margin_top = 72.0
margin_right = 135.0
margin_bottom = 196.0
mouse_filter = 2
custom_constants/separation = 12

[node name="PanelContainer2" type="PanelContainer" parent="CornerMenu_Canvas/CornerMenu_VBox/MenuList_VBox"]
margin_right = 135.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 3 )

[node name="Save_HBox" type="HBoxContainer" parent="CornerMenu_Canvas/CornerMenu_VBox/MenuList_VBox/PanelContainer2"]
margin_right = 135.0
margin_bottom = 40.0
mouse_filter = 0
custom_constants/separation = 16
alignment = 2

[node name="Save_Label" type="Label" parent="CornerMenu_Canvas/CornerMenu_VBox/MenuList_VBox/PanelContainer2/Save_HBox"]
margin_left = 44.0
margin_top = 10.0
margin_right = 79.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Save"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CornerMenu_Canvas/CornerMenu_VBox/MenuList_VBox/PanelContainer2/Save_HBox"]
margin_left = 95.0
margin_right = 135.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 2
custom_styles/panel = SubResource( 4 )

[node name="Save_TextureRect" type="TextureRect" parent="CornerMenu_Canvas/CornerMenu_VBox/MenuList_VBox/PanelContainer2/Save_HBox/Panel"]
margin_left = 9.20276
margin_top = 7.80591
margin_right = 33.2028
margin_bottom = 31.8059
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CornerMenu_Canvas/CornerMenu_VBox/MenuList_VBox"]
margin_top = 52.0
margin_right = 135.0
margin_bottom = 92.0
custom_styles/panel = SubResource( 3 )

[node name="Export_HBox" type="HBoxContainer" parent="CornerMenu_Canvas/CornerMenu_VBox/MenuList_VBox/PanelContainer"]
margin_right = 135.0
margin_bottom = 40.0
mouse_filter = 0
custom_constants/separation = 16
alignment = 2

[node name="Export_Label" type="Label" parent="CornerMenu_Canvas/CornerMenu_VBox/MenuList_VBox/PanelContainer/Export_HBox"]
margin_left = 34.0
margin_top = 10.0
margin_right = 79.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Export"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CornerMenu_Canvas/CornerMenu_VBox/MenuList_VBox/PanelContainer/Export_HBox"]
margin_left = 95.0
margin_right = 135.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
mouse_filter = 2
custom_styles/panel = SubResource( 4 )

[node name="Export_TextureRect" type="TextureRect" parent="CornerMenu_Canvas/CornerMenu_VBox/MenuList_VBox/PanelContainer/Export_HBox/Panel"]
margin_left = 9.45276
margin_top = 6.80591
margin_right = 33.4528
margin_bottom = 30.8059
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CornerMenu_Canvas/CornerMenu_VBox/MenuList_VBox"]
margin_top = 104.0
margin_right = 135.0
margin_bottom = 124.0
rect_min_size = Vector2( 2, 20 )
custom_styles/panel = SubResource( 5 )

[node name="TextTools_PanelContainer" type="PanelContainer" parent="."]
visible = false
margin_left = 504.0
margin_top = 411.0
margin_right = 750.0
margin_bottom = 448.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TextTools_PanelContainer"]
margin_right = 459.0
margin_bottom = 37.0
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TextTools_PanelContainer/MarginContainer"]
margin_left = 8.0
margin_top = 4.0
margin_right = 451.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="Style_OptionButton" type="OptionButton" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer"]
margin_right = 121.0
margin_bottom = 29.0
custom_styles/normal = SubResource( 7 )
custom_constants/hseparation = 8
custom_constants/arrow_margin = 0
text = "Default style"
expand_icon = true

[node name="Bold_Panel" type="Panel" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 129.0
margin_right = 157.0
margin_bottom = 29.0
rect_min_size = Vector2( 28, 28 )
mouse_filter = 2
custom_styles/panel = SubResource( 8 )

[node name="Button" type="Button" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer/Bold_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 28.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
icon = ExtResource( 13 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Italic_Panel" type="Panel" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 165.0
margin_right = 194.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 9 )

[node name="Button" type="Button" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer/Italic_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
icon = ExtResource( 5 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Underline_Panel" type="Panel" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 202.0
margin_right = 231.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 9 )

[node name="Button" type="Button" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer/Underline_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strikethrough_Panel" type="Panel" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 239.0
margin_right = 268.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 9 )

[node name="Button" type="Button" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer/Strikethrough_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
icon = ExtResource( 4 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Code_Panel" type="Panel" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 276.0
margin_right = 305.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 9 )

[node name="Button" type="Button" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer/Code_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
icon = ExtResource( 11 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center_Panel" type="Panel" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 313.0
margin_right = 342.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 9 )

[node name="Button" type="Button" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer/Center_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
icon = ExtResource( 14 )
flat = true
expand_icon = true

[node name="Right_Panel" type="Panel" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 350.0
margin_right = 379.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 9 )

[node name="Button" type="Button" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer/Right_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
icon = ExtResource( 15 )
flat = true
expand_icon = true

[node name="Color_Panel" type="Panel" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 387.0
margin_right = 441.0
margin_bottom = 29.0
rect_min_size = Vector2( 54, 29 )
mouse_filter = 2
custom_styles/panel = SubResource( 9 )

[node name="Button" type="Button" parent="TextTools_PanelContainer/MarginContainer/HBoxContainer/Color_Panel"]
modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
margin_left = 3.92865
margin_right = 48.9286
margin_bottom = 29.0
rect_min_size = Vector2( 26, 26 )
custom_fonts/font = SubResource( 10 )
text = "#fffff"
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_Main_Panel_gui_input"]
[connection signal="mouse_exited" from="CornerMenu_Canvas/CornerMenu_VBox" to="CornerMenu_Canvas/CornerMenu_VBox" method="_on_CornerMenu_VBox_mouse_exited"]
[connection signal="mouse_entered" from="CornerMenu_Canvas/CornerMenu_VBox/Logo_HBox/Panel/Logo_TextureRect" to="CornerMenu_Canvas/CornerMenu_VBox" method="_on_Logo_TextureRect_mouse_entered"]
